Revision history for Perl module Net::ACME

0.01 Mon Nov 14 2016
- original port from cPanel

0.02 Thu Nov 17 2016
- Remove CryptX dependency

0.03 Fri Nov 18 2016
- Fix broken Crypt::JWT dependency, make Crypt::OpenSSL::RSA optional
- Make http-01 challenge local handler create .well-known directory

0.09 Thu Nov 24 2016
- Finish porting cPanel tests
- Remove Class::Accessor dependency
- Add more documentation
- Need to test CPAN installation

0.091
- Compatible with Perl 5.8+ (previously required 5.14+)
- Fix a clobber of $@
- Prevent clobber of $?
- Remove XS dependencies from tests.